# KataGo

./: .gitignore
cpp/: CMakeLists.txt  conanfile.txt  gatekeeper.cpp  gtp.cpp  main.cpp  match.cpp  matchauto.cpp  selfplay.cpp
cpp/core/: global.cpp  rand.cpp  sha2.cpp  test.h
cpp/dataio/: numpywrite.cpp
cpp/distributed/: client.cpp  client.h
cpp/game/: board.h  boardhistory.cpp
cpp/neuralnet/: nninputs.h
cpp/search/: search.cpp
